# echo.filipton.space

./: Dockerfile  README.md  build.sh  docker-build.sh  docker-compose.yml  nginx-site.conf  perf.js  perf.sh  run.sh
actix-test/: Cargo.toml
actix-test/public/cxz/: dsa.html
actix-test/public/vcx/: index.html
actix-test/src/: main.rs
backend/: Cargo.toml
backend/public/: test.html
backend/public/vcx/: wow.html
backend/src/: echo.rs  github.rs  handler.rs  login.rs  main.rs  router.rs  structs.rs  utils.rs  webhook.rs
frontend/: package-lock.json  package.json
frontend/src/lib/: utils.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
