[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
hyper = { version = "0.14.27", features = ["full"] }
fastwebsockets = { git = "https://github.com/denoland/fastwebsockets.git", features = ["hyper", "upgrade"] }
tokio = { version = "1.27.0", features = ["full"] }
rand = "0.8.5"
mime_guess = "2.0.4"
hyper-tls = "0.5.0"
serde_json = "1.0.100"
sqlx = { version = "0.7.0", features = ["runtime-tokio", "uuid", "postgres"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
